decaf-compiler/samples/lex/ident.decaf.out

*** Error line 6.
VAR_2
^^^^^
*** syntax error

